tests/snapshots/parser__resource_geometry.snap
---
source: tests/parser.rs
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 12,
        },
        source: "geometry.foo",
        is_complex: false,
        body: Vec(
            [
                Resource(
                    ResourceExpression {
                        span: Span {
                            start: 0,
                            end: 12,
                        },
                        section: Geometry,
                        name: IdentifierReference {
                            span: Span {
                                start: 9,
                                end: 12,
                            },
                            name: "foo",
                        },
                    },
                ),
            ],
        ),
    },
    errors: [],
    panicked: false,
}
