tests/snapshots/parser__resource_material.snap
---
source: tests/parser.rs
expression: out
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 12,
        },
        source: "material.bar",
        body: Simple(
            Resource(
                ResourceExpression {
                    span: Span {
                        start: 0,
                        end: 12,
                    },
                    section: Material,
                    name: IdentifierReference {
                        span: Span {
                            start: 9,
                            end: 12,
                        },
                        name: "bar",
                    },
                },
            ),
        ),
    },
    errors: [],
    panicked: false,
}
