tests/snapshots/parser__resource_texture.snap
---
source: tests/parser.rs
expression: out
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 11,
        },
        source: "texture.baz",
        body: Simple(
            Resource(
                ResourceExpression {
                    span: Span {
                        start: 0,
                        end: 11,
                    },
                    section: Texture,
                    name: IdentifierReference {
                        span: Span {
                            start: 8,
                            end: 11,
                        },
                        name: "baz",
                    },
                },
            ),
        ),
    },
    errors: [],
    panicked: false,
}
