tests/snapshots/parser__return.snap
---
source: tests/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 10,
        },
        source: "return v.a",
        body: Complex(
            [
                Return(
                    ReturnStatement {
                        span: Span {
                            start: 0,
                            end: 10,
                        },
                        argument: Variable(
                            VariableExpression {
                                span: Span {
                                    start: 7,
                                    end: 10,
                                },
                                lifetime: Variable,
                                member: Property {
                                    span: Span {
                                        start: 7,
                                        end: 10,
                                    },
                                    property: IdentifierReference {
                                        span: Span {
                                            start: 9,
                                            end: 10,
                                        },
                                        name: "a",
                                    },
                                },
                            },
                        ),
                    },
                ),
            ],
        ),
    },
    errors: [],
    panicked: false,
}
