tests/snapshots/parser__semisemisemisemi.snap
---
source: tests/parser.rs
---
ParserReturn {
    program: Program {
        span: Span {
            start: 5,
            end: 170,
        },
        source: "\n    ;;;;;;; ;;;;;;; ;;;    ;;; ;;\n    ;;      ;;      ;;;;  ;;;; ;;\n    ;;;;;;; ;;;;;   ;; ;;;; ;; ;;\n         ;; ;;      ;;  ;;  ;; ;;\n    ;;;;;;; ;;;;;;; ;;      ;; ;;\n    ",
        is_complex: true,
        body: Vec(
            [],
        ),
    },
    errors: [],
    panicked: false,
}
