tests/snapshots/parser__string.snap
---
source: tests/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 19,
        },
        source: "'foo_bar123.-$#*()'",
        body: Simple(
            StringLiteral(
                StringLiteral {
                    span: Span {
                        start: 0,
                        end: 19,
                    },
                    value: "foo_bar123.-$#*()",
                },
            ),
        ),
    },
    errors: [],
    panicked: false,
}
