tests/snapshots/parser__this.snap
---
source: tests/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 4,
        },
        source: "this",
        body: Simple(
            This(
                ThisExpression {
                    span: Span {
                        start: 0,
                        end: 4,
                    },
                },
            ),
        ),
    },
    errors: [],
    panicked: false,
}
